...
    LaunchedEffect(reviewId) {
        viewModel.loadReview(reviewId)
    }

    Box(modifier = Modifier
        .fillMaxSize()
        .testTag("reviewDetailScreen")
    ) {
        PlainBackground()

        if (state.selectedReview != null) {
            LazyColumn(
                modifier = modifier
...
        }

        BackButton(
            onBack = onBackClick,
            modifier = Modifier
                .padding(start = 6.dp, top = 8.dp)
                .testTag("backButton")
        )
    }
}

@Composable
fun ReviewActionBar(
...
