...
            style = TextStyle(fontSize = 18.sp)
        )

        Spacer(modifier = Modifier.height(50.dp))

        GeneralButton(
            //modifier = Modifier.testTag("btnLogin"),
            text = stringResource(R.string.login),
            onClick = loginButtonPressed
        )

        Spacer(modifier = Modifier.height(4.dp))

        GeneralButton(
            //modifier = Modifier.testTag("btnRegister"),
            text = stringResource(R.string.register),
            color = MaterialTheme.colorScheme.tertiaryContainer,
            onClick = registerButtonPressed
        )
    }
}
...
