...
import com.example.soymusicreviewapp.ui.theme.CompMovilProyectoTheme
import com.example.soymusicreviewapp.ui.utils.*

@Composable
fun LoginScreen(
    navigateToHome: () -> Unit,
    //modifier: Modifier = Modifier.testTag("loginScreen"),
    modifier: Modifier = Modifier,
    onForgotPasswordClick: () -> Unit,
    viewModel: LoginViewModel
) {
    val state by viewModel.uiState.collectAsState()
    val context = LocalContext.current
...
